TFP-6445 fjerne openapi og seagger utenom Operation